--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -3,7 +3,7 @@
 % MACHINE  all
 % INFO     -
 %
-% DATE     18.10.2021
+% DATE     01.11.2021
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -57,12 +57,23 @@ Kreuzen Sie alle wahren Aussagen an.
 \vskip\baselineskip
 %\clearpage
 
-\begin{luacode}
-  require("statementCollator.lua")
-  collateStatements(lfs.currentdir() .. "/Fragesammlung/\Oberthema/", \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
-  printStatements()
-  printSolutions()
-\end{luacode}
+\directlua{
+  require('statementCollator.lua')
+  local mixedstatements = collateStatements(lfs.currentdir() .. '/Fragesammlung/\Oberthema/', \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
+  printStatements(mixedstatements)
+  printSolutions(mixedstatements)
+}
+
+%\begin{luacode}
+%  require("statementCollator.lua")
+%  collateStatements(lfs.currentdir() .. "/Fragesammlung/\Oberthema/", \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
+%  printStatements()
+%  printSolutions()
+%\end{luacode}
+
+%\begin{luacode}
+%  tex.print(lfs.currentdir())
+%\end{luacode}
 
 
 \end{document}
