--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -3,7 +3,7 @@
 % MACHINE  all
 % INFO     -
 %
-% DATE     01.11.2021
+% DATE     25.04.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -59,7 +59,11 @@ Kreuzen Sie alle wahren Aussagen an.
 
 \directlua{
   require('statementCollator.lua')
-  local mixedstatements = collateStatements(lfs.currentdir() .. '/Fragesammlung/\Oberthema/', \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
+
+  local sep = getPathSeparator()
+
+  local mixedstatements = collateStatements(lfs.currentdir() .. sep .. 'Fragesammlung' .. sep .. '\Oberthema' .. sep , \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
+
   printStatements(mixedstatements)
   printSolutions(mixedstatements)
 }
