print checkedbox if statement is true in printAll(), TODOs, cleaning

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -1,9 +1,8 @@
 % ==================================================================
 % FILE     Aussagetest.tex
-% MACHINE  all
 % INFO     -
 %
-% DATE     25.04.2022
+% DATE     13.06.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -25,26 +24,15 @@
 %\newcommand*{\Oberthema}{11-Exponentialfunktionen}
 %\newcommand*{\Oberthema}{12-Datenanalyse}
 %\newcommand*{\Oberthema}{13-Wahrscheinlichkeitsrechnen}
-%\newcommand*{\Oberthema}{14-Planimetrie-I}
-%\newcommand*{\Oberthema}{15-Planimetrie-II}
-%\newcommand*{\Oberthema}{16-Trigonometrie-I}
-%\newcommand*{\Oberthema}{17-Trigonometrie-II}
+%\newcommand*{\Oberthema}{14-Planimetrie-I}    % Dreiecke/Vierecke
+%\newcommand*{\Oberthema}{15-Planimetrie-II}   % Kreis, Bogenmass, Ähnlichkeit
+%\newcommand*{\Oberthema}{16-Trigonometrie-I}  % am rechtwinkligen Dreieck
+%\newcommand*{\Oberthema}{17-Trigonometrie-II} % am allgemeinen Dreieck, Einheitskreis, Graphen
 %\newcommand*{\Oberthema}{18-Stereometrie}
 %\newcommand*{\Oberthema}{19-Vektorgeometrie}
 
 \newcommand*{\AnzahlWahreAussagen}{3}
 \newcommand*{\AnzahlFalscheAussagen}{5}
-
-
-
-% TODO:
-% Ausrichtung: TALS, DL, GESO
-
-% Unterthema: Quadratwurzel Bruchterme Kreisberühraufgaben ...
-
-% Oberthema kann nur eines angegeben werden
-% Unterthemen können mehrere in einer Liste angegeben werden
-
 
 
 % ==================================================================
