printAll() with optional parameter for printing full file path

--- a/AussagetestDebug.tex
+++ b/AussagetestDebug.tex
@@ -19,7 +19,7 @@
 
 \directlua{
   require('statementCollator.lua')
-  printAll(lfs.currentdir() .. '/' .. 'Fragesammlung')
+  printAll(lfs.currentdir() .. '/' .. 'Fragesammlung', true)
 }
 
 
