--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -2,7 +2,7 @@
 % FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     13.06.2022
+% DATE     01.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
@@ -49,15 +49,23 @@ Kreuzen Sie alle wahren Aussagen an.
 
 \directlua{
   require('statementCollator.lua')
-
   local sep = getPathSeparator()
+
+  % -----------------------------------------------------------------
+  % Dieser Teil erstellt die zufallsgenerierten Tests
 
   local mixedstatements = collateStatements(lfs.currentdir() .. sep .. '\Sammelordner' .. sep .. '\Oberthema' .. sep , \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
 
   printStatements(mixedstatements)
-  printSolutions(mixedstatements)
-}
+  printSolutions(mixedstatements, false)
 
+  % -----------------------------------------------------------------
+  % Dieser Teil erstellt eine Zusammenfassung aller vorhandenen Aussagen
+
+  printAll(lfs.currentdir() .. sep .. '\Sammelordner', true)
+
+  % -----------------------------------------------------------------
+}
 
 \end{document}
 % ==================================================================
