further reworking on wrapper macros for lua stuff

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -59,8 +59,8 @@ Kreuzen Sie alle wahren Aussagen an.
 
   local mixedstatements = collateStatements(dirlist, \AnzahlWahreAussagen, \AnzahlFalscheAussagen)
 
-  printStatements(mixedstatements)
-  printSolutions(mixedstatements, false)
+  printChecklist(mixedstatements)
+  printCheckedChecklist(mixedstatements, false)
 
   % -----------------------------------------------------------------
   % Dieser Teil erstellt eine Zusammenfassung aller vorhandenen Aussagen
