--- a/AussagetestDebug.tex
+++ b/AussagetestDebug.tex
@@ -1,20 +1,19 @@
 % ==================================================================
-% FILE     AussagetestDebug.tex
+% FILE     Aussagetest.tex
 % INFO     -
 %
-% DATE     04.07.2022
+% DATE     05.07.2022
 % OWNER    Bischofberger
 % ==================================================================
 
 \documentclass{AussagetestClass}
 
-% Erforderliche Ordnerstruktur: 
-% \Sammlungsordner/01-Algebra/
-% \Sammlungsordner/02-Lineare-Gleichungen/
-% \Sammlungsordner/03-Lineare-Gleichungssysteme/
-% ...
+% ------------------------------------------------------------------
+% some info here...
+\usepackage{randgentests}
 
-\renewcommand*{\Sammlungsordner}{Fragesammlung}
+% redefine parent folder here if you wish
+%\renewcommand*{\Sammlungsordner}{Fragesammlung}
 
 % Alle unkommentierten (aktiven) Ordner werden berücksichtigt.
 \renewcommand*{\Themenliste}{%
@@ -43,6 +42,7 @@
 % Aktiviere z.B. \TALSGLF, um nur die relevanten Themen für die GLF-Prüfung zu berücksichtigen.
 %\TALSGLF
 %\TALSSPF
+
 
 % ==================================================================
 \begin{document}
