let true/false subfolders be controlled by package macros

--- a/Aussagetest.tex
+++ b/Aussagetest.tex
@@ -43,6 +43,10 @@
 %\TALSGLF
 %\TALSSPF
 
+% Wünscht man andere wahr/falsch-Unterordner, können sie hier geändert werden.
+%\renewcommand*{\WahreAussagen}{01-wahr}
+%\renewcommand*{\FalscheAussagen}{02-falsch}
+
 
 % ==================================================================
 \begin{document}
