make sure we have a "/" at the end of the true/false subdirs

--- a/randgentests.sty
+++ b/randgentests.sty
@@ -93,8 +93,8 @@
   }%
 }
 
-\newcommand*{\WahreAussagen}{01-wahr/}
-\newcommand*{\FalscheAussagen}{02-falsch/}
+\newcommand*{\WahreAussagen}{01-wahr}
+\newcommand*{\FalscheAussagen}{02-falsch}
 
 
 \newif\ifPrintSolutions
